--- a/bootstrap-3.3.7/less/order-block.less
+++ b/bootstrap-3.3.7/less/order-block.less
@@ -10,7 +10,7 @@
 	}
 
 	&__name {
-		margin-bottom: 30px;
+		// margin-bottom: 30px;
 	}
 
 	&__delivery-text {
@@ -103,16 +103,16 @@
 
 .order-pay {
 	border: 1px solid #ccc;
-	margin-top: 90px;
-	min-height: 403px;
+	padding: 15px;
+    margin-top: 7px;
 
 	&__list {
 		padding-left: 10px;
 	}
 
 	&__location {
-		margin-top: 36px;
-		margin-left: -15px;
+		// margin-top: 36px;
+		// margin-left: -15px;
 	}
 
 	&__grey {
